# telegram-chatgpt-rust

./: Cargo.toml  README-zh.md  README.md
src/: main.rs  storages.rs
src/chat_gpt/: grammar_checker.rs  mod.rs  translation.rs  variable_namer.rs
src/telegram/: message_helper.rs  mod.rs  startup.rs
src/utils/: mod.rs  telegram_utils.rs
storage/: roles.yaml
