[package]
name = "telegram-chatgpt-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai_chatgpt_api = "0.1.2"
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.70"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.19"
serde_json = "1.0.96"
